k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scraper
  namespace: figurecollecting
  labels:
    app: scraper
    app.kubernetes.io/name: scraper
    app.kubernetes.io/part-of: figure-collector
spec:
  type: ClusterIP
  selector:
    app: scraper
  ports:
    - port: 3050
      targetPort: 3050
      protocol: TCP
      name: http
